manifest/devops/overlays/dev/test-admin-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: test-dev-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-dev-admin
  template:
    metadata:
      labels:
        app: test-dev-admin
        app.kubernetes.io/name: test-dev-admin
        app.kubernetes.io/instance: server             
    spec:
      containers:
      - name: test-dev-admin
        image: asia-northeast3-docker.pkg.dev/test/test-dev-artifact-registry/test-admin
        command: ["sh", "-c", "bundle exec puma -C config/puma.rb"]  
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
