manifest/devops/overlays/dev/test-admin-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  parentRefs:
  - name: test-dev-api-gateway
    namespace: api
  hostnames:
  - "admin-dev-gke.test.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: test-dev-admin-service
      port: 80

---

apiVersion: v1
kind: Service
metadata:
  name: service 
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{}}}'
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: test-dev-admin
    env: dev
    app.kubernetes.io/name: test-dev-admin
    app.kubernetes.io/instance: server
